<resources>
    <string name="app_name">微蓝单车</string>
    <string name="home_title">我的单车</string>
    <string name="wallet_title">我的钱包</string>
    <string name="discount_title">我的优惠</string>
    <string name="routes_title">我的行程</string>
    <string name="mymsg_title">我的消息</string>
    <string name="invite_title">邀请好友</string>
    <string name="guide_title">用户指南</string>
    <string name="aboutus_title">关于我们</string>
    <string name="settings_title">设置</string>
    <string name="userinfo_title">个人信息</string>
    <string name="nickname_title">昵称</string>
    <string name="identify_title">身份验证</string>
    <string name="mobile_title">手机号码</string>
    <string name="school_title">校园认证</string>
    <string name="aboard_title">海外认证</string>
    <string name="walletdetail_title">明细</string>
    <string name="mytickets_title">我的用车券</string>
    <string name="ticket_use_des_title">使用说明</string>
    <string name="deposit_title">押金充值</string>
    <string name="rule_detail_title">路线详情</string>
    <string name="user_rule_title">用户协议</string>
    <string name="deposit_des_title">押金说明</string>
    <string name="recharge_rule_title">充值说明</string>
    <string name="score_title">我的信用分</string>
    <string name="score_rule_title">信用分规则</string>
    <string name="score_history_title">信用分历史</string>
    <string name="cannot_unlock_title">无法开锁</string>
    <string name="report_illeagel_title">举报违停</string>
    <string name="recharge_problem_title">立即充值</string>
    <string name="report_broken_title">故障报告</string>
    <string name="submmit">提交</string>
    <string name="exchange">立即兑换</string>
    <string name="concume_rule">计费规则</string>
    <string name="ble_enalbe">启用蓝牙开锁</string>
    <string name="clear_cache">清理缓存</string>
    <string name="cache_size">缓存大小</string>
    <string name="exit">退出登录</string>
    <string name="score">信用分</string>
    <string name="rule">规则</string>
    <string name="scan_button_text">扫码开锁</string>
    <string name="can_not_find_version_name">未知版本号</string>
    <string name="version_name">V</string>
    <string name="charge_des">畅享单车是为实现用户关锁即可离开，费用支付自动完成的流畅体验，用户需要充值支付车费。充值车费请点击APP左上角按键进入"个人中心"页面，点击"我的钱包"进入充值页面，充值支持"微信支付"和"支付宝"。</string>
    <string name="tip_1">1.充值车费后，车费余额用于支付用车订单，不设失效期，不能转移 、转赠</string>
    <string name="tip_2">2.畅享单车支持任意金额的充值，单笔最低1元，最高100元，请根据实际需求选择合适的充值额度。</string>
    <string name="tip_3">3.如遇到车费余额相关问题请您联系客服。</string>
    <string name="aboard_identify_des">请提供2张照片，一张为本人手持身份证件的正面合影，另一张为身份证原件照。请确保五官、证件内容均清晰可见（限中华人民共和国身份证、护照、台胞证）。</string>
    <string name="under_check">审核中</string>
    <string name="check_done">已认证</string>
    <string name="not_identify">未认证</string>
    <string name="app_tip">提示</string>
    <string name="pay_result_tip">这个界面用于显示第三方app通过微信支付的结果</string>
    <string name="pay_result_callback_msg" formatted="false">微信支付结果：%s</string>
    <string name="not_login">未认证</string>
    <string name="not_login_username">你的名字</string>
    <string name="wechat">微蓝畅享</string>
    <string name="phone">4001098234</string>
    <string name="email">uedlily@sina.com</string>
    <string name="web">weilangonxiang.com</string>
    <string name="share_title">微蓝畅享</string>
    <string name="share_text">
            微蓝畅享单车是无桩共享单车项目，旨在成为人们城市短途出行的首选方式。我们使用了独特的专利技术，重新设计了车身和智能锁，并结合互联网技术，摆脱了固定停车桩的枷锁，让您随时随地可用身边的微蓝畅享单车。同时，这一切都建立在人人可负担的价格之上，我们希望能让人们的出行更绿色，减少交通拥堵，让我们的生活更智能美好。
    </string>
    <string name="name">姓名</string>
    <string name="enter_name">请输入真实姓名</string>
    <string name="identify_code">证件号</string>
    <string name="enter_identifycode">请输入身份证号</string>
    <string name="country">国籍</string>
    <string name="enter_country">请输入您的国籍</string>
    <string name="identify_pic">手持证件照</string>
    <string name="identify_front">证件正面照</string>
    <string name="note">提示</string>
    <string name="our_wechat">微信公众号</string>
    <string name="phone_num">联系电话</string>
    <string name="our_email">电子邮箱</string>
    <string name="out_web">官方网站</string>
    <string name="company">微蓝畅享(北京)科技有限公司</string>
    <string name="all_problem">全部问题</string>
    <string name="text_unlock">无法开锁</string>
    <string name="text_get_qrcode">扫描获取二维码</string>
    <string name="text_tip1">请拍摄车辆照片及其周围环境</string>
    <string name="text_hint_tip2">可输入300字</string>
    <string name="text_bike_broken">车辆故障</string>
    <string name="problem1">车太重，骑不动</string>
    <string name="problem2">把套歪了</string>
    <string name="problem3">踏板坏了</string>
    <string name="problem4">刹车失灵</string>
    <string name="problem5">二维码脱落</string>
    <string name="problem6">车铃丢了</string>
    <string name="problem7">龙头歪斜</string>
    <string name="problem8">其它</string>
    <string name="tip_4">请拍摄车辆照片及其周围环境帮助我们改进</string>
    <string name="tip_5">请描述您的问题</string>
    <string name="text_change_phone">更换手机号</string>
    <string name="text_unvalid">请输入正确的身份证号</string>
    <string name="text_new_num">新手机号</string>
    <string name="text_enter_valid_num">请输入新手机号</string>
    <string name="text_enter_new_right_num">请输入正确的手机号</string>
    <string name="text_checkNum">验证码</string>
    <string name="text_enter_valid_chechnum">请输入验证码</string>
    <string name="text_get_checknum">获取验证码</string>
    <string name="text_change_phonenum">授权更换手机号</string>
    <string name="tip_6">三个月内只允许更换一次手机号</string>
    <string name="check_version">检查版本</string>
    <string name="result_title">本次消费</string>
    <string name="broken">故障</string>
    <string name="tip7">本次行程消费</string>
    <string name="tip_8">客户服务</string>
    <string name="tip_9">押金退款已超过7个工作日还未到账</string>
    <string name="tip_10">1.选择支付渠道</string>
    <string name="tip_11">支付宝</string>
    <string name="tip_12">微信支付</string>
    <string name="tip_13">2.请上传您的支付订单页截屏，确保订单号清晰可见：</string>
    <string name="tip_15">3.填写支付订单号</string>
    <string name="tip_16">支付订单号</string>
    <string name="tip_18">订单号查询办法</string>
    <string name="contact_us_title">联系我们</string>
    <string name="tip_19">查看信用历史</string>
    <string name="tip_20">路线详情</string>
    <string name="tip_21">车牌号：</string>
    <string name="tip_22">常用地址</string>
    <string name="tip_23">请输入地址</string>
    <string name="tip_24">本次消费</string>
    <string name="tip_25">申请退款成功</string>
    <string name="tip_26">由于银行原因可能押金会在0-3日内到账</string>
    <string name="confirm">确认</string>
    <string name="tip_27">联系客服</string>
    <string name="save">保存</string>
    <string name="tip_28">找不到车</string>
    <string name="others">其它</string>
    <string name="tip_29">押金充值后可全额退款</string>
    <string name="tip_30">微信</string>
    <string name="tip_31">支付宝</string>
    <string name="tip_32">立即充值</string>
    <string name="tip_33">累计骑行(公里)</string>
    <string name="tip_34">节约碳排放(千克)</string>
    <string name="tip_35">运动成就(大卡)</string>
    <string name="tip_36">手机号码</string>
    <string name="tip_37">原手机号退押金（2-7个工作日到账）</string>
    <string name="tip_38">更换手机号，登录重新交押金</string>
    <string name="tip_39">车费余额，行程等信息不变</string>
    <string name="tip_40">更换手机号码</string>
    <string name="tip_41">充值</string>
    <string name="tip_42">我的余额</string>
    <string name="tip_43">充值金额</string>
    <string name="tip_44">支付方式</string>
    <string name="tip_45">立即充值</string>
    <string name="tip_46">退款说明</string>
    <string name="tip_47">7个工作日押金未到账</string>
    <string name="tip_48">手机验证</string>
    <string name="tip_hint_49">请输入手机号</string>
    <string name="tip_50">请输入验证码</string>
    <string name="tip_51">验证手机</string>
    <string name="tip_52">扫描获取二维码</string>
    <string name="tip_53">请拍摄车辆照片及其周围环境</string>
    <string name="tip_54">可输入300字</string>
    <string name="tip_55">步行路线详情</string>
    <string name="tip_56">您对哪段行程有疑问?</string>
    <string name="tip_57">客户服务</string>
    <string name="tip_58">单车编号</string>
    <string name="tip_59">开始时间</string>
    <string name="tip_60">结束时间</string>
    <string name="tip_61">遇到什么问题？</string>
    <string name="tip_62">发现车辆故障</string>
    <string name="tip_63">其它问题</string>
    <string name="tip_64">我的行程</string>
    <string name="tip_65">校园证件号</string>
    <string name="tip_66">请输入校园证件号</string>
    <string name="tip_67">请选择学校名称</string>
    <string name="tip_68">认证</string>
    <string name="tip_69">我的信用积分</string>
    <string name="tip_70">去哪找我</string>
    <string name="cancel">取消</string>
    <string name="tip_71">常用地址</string>
    <string name="tip_72">您的专属邀请码为：</string>
    <string name="tip_73">点击复制</string>
    <string name="tip_74">立即邀请</string>
    <string name="tip_75">使用说明</string>
    <string name="tip_76">头像</string>
    <string name="tip_77">实名认证</string>
    <string name="not_verify">未认证</string>
    <string name="tip_78">手机号</string>
    <string name="tip_79">我的余额</string>
    <string name="tip_80">我的用车券</string>
    <string name="tip_81">我的押金</string>
    <string name="tip_82">押金充值</string>
    <string name="tip_83">输入优惠码</string>
    <string name="tip_84">请输入您获得的优惠码</string>
    <string name="tip_85">正在使用蓝牙开锁</string>
    <string name="tip_86">车辆ID：</string>
    <string name="tip_87">确定清理本地缓存记录？</string>
    <string name="tip_88">拍照</string>
    <string name="tip_89">从相册选一张</string>
    <string name="tip_90">您只有一次机会修改专属邀请码，不能超过21个数字</string>
    <string name="tip_91">更换手机号前需要退还押金，您还未退还押金，是否前去退还押金？</string>
    <string name="tip_92">您还没有打开蓝牙，打开蓝牙无需手动输入密码，可以自动解锁</string>
    <string name="tip_93">不想打开</string>
    <string name="tip_94">打开蓝牙</string>
    <string name="tip_95">押金退还时间为2-7个工作日，在此期间您的账号将无法用车。是否仍然退押金？</string>
    <string name="tip_96">退押金</string>
    <string name="tip_97">微信好友</string>
    <string name="tip_98">QQ好友</string>
    <string name="start">出发</string>
    <string name="tip_99">骑行时间:</string>
    <string name="tip_100">骑行花费:</string>
    <string name="tip_101">查看原文</string>
    <string name="tip_102">用车券</string>
    <string name="tip_103">有效期至：</string>
    <string name="tip_104">常用地址</string>
    <string name="tip_105">点击设置常用地址</string>
    <string name="tip_106">编辑</string>
    <string name="tip_107">删除</string>
    <string name="tip_108">未知位置</string>
    <string name="tip_109">预约中</string>
    <string name="tip_110">自行车编号:</string>
    <string name="tip_111">保留剩余时间：</string>
    <string name="tip_112">取消预约</string>
    <string name="tip_113">手动关锁即可结束计费</string>
    <string name="tip_114">正在用车</string>
    <string name="tip_115">分钟</string>
    <string name="tip_116">骑行时间</string>
    <string name="tip_117">米</string>
    <string name="tip_118">骑行距离</string>
    <string name="tip_119">卡路里</string>
    <string name="tip_120">运动燃烧</string>
    <string name="tip_121">身份验证</string>
    <string name="tip_122">身份证号不正确</string>
    <string name="tip_123">无中华人民共和国居民身份证，请点击这里</string>
    <string name="tip_124">距离起始位置</string>
    <string name="tip_125">步行可到达</string>
    <string name="tip_126">预约用车</string>
    <string name="tip_127">身份验证</string>
    <string name="tip_128">您的信息已提交，正在审核中，请耐心等待</string>
    <string name="tip_129">点击登陆</string>
    <string name="load_failed">加载失败重新加载</string>
    <string name="tip_130">详情</string>
    <string name="tip_140">没有更多啦</string>
    <string name="tip_141">现在什么大事也没发生哦～</string>
    <string name="tip_142">我的位置:</string>
    <string name="txt_not_login">您还没有登录,请先登录</string>
    <string name="tip_131">验证码已发送</string>
    <string name="tip_132">地址不能为空哦～</string>
    <string name="tip_134">提交成功</string>
    <string name="tip_135">密码错误，开锁失败~</string>
    <string name="tip_136">没有发现蓝牙设备,直接显示密码，手动开锁</string>
    <string name="tip_137">请您先登录</string>
    <string name="tip_138">对不起,没有搜索到路线</string>
    <string name="tip_139">请求密码失败，请重试！</string>
    <string name="tip_143">起点未设置</string>
    <string name="tip_144">终点未设置</string>
    <string name="tip_147">登陆已过期</string>
    <string name="tip_148">没有搜索到相关数据</string>
    <string name="tip_149">请先登录</string>
    <string name="manual_unlock">请手动开锁</string>
    <string name="unlock_psd">开锁密码：%1$s</string>
    <string name="order_hint">订单将在%1$s秒后自动取消</string>
    <string name="cancel_order">取消订单</string>
    <string name="continue_use">确定</string>
</resources>