<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:actionBar="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--这个是隐藏的布局，然后通过动态的设置高度达到效果-->
    <LinearLayout
        style="@style/StatusBarStyle"
        android:background="@color/black_light" />

    <com.wlcxbj.bike.view.ActionBarView
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        actionBar:actionBar_background="@color/black_light"
        actionBar:centerText="@string/tip_8"
        actionBar:rightEnable="false" />

    <TextView
        android:padding="10dp"
        android:textColor="@color/black"
        android:layout_marginLeft="15dp"
        android:text="@string/tip_9"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:textColor="@color/black"
        android:text="@string/tip_10"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:textColor="@color/WHITE"
            android:id="@+id/alipay"
            android:text="@string/tip_11"
            android:background="@color/wallet_orange"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/WHITE"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="20dp"
            android:id="@+id/wechat"
            android:text="@string/tip_12"
            android:background="@color/gray"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:text="@string/tip_13"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:src="@mipmap/report_violation_default"
        android:layout_marginLeft="20dp"
        android:id="@+id/iv_screenshot"
        android:layout_width="80dp"
        android:layout_height="80dp"
        tools:ignore="ContentDescription"/>

    <TextView
        android:padding="10dp"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/tip_15"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/transaction_code"
        android:padding="10dp"
        android:textSize="16sp"
        android:hint="@string/tip_16"
        android:background="@color/light_gray"
        android:textColor="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_get_transCode"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:gravity="right"
        android:textColor="@color/wallet_orange"
        android:text="@string/tip_18"
        android:textSize="12sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:clickable="false"
        android:textSize="20sp"
        android:textColor="@color/WHITE"
        android:background="@color/gray"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/submmit"
        android:id="@+id/btn_missing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>