<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:actionBar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--这个是隐藏的布局，然后通过动态的设置状态栏高度达到效果-->
    <include layout="@layout/layout_status_bar" />

    <com.wlcxbj.bike.view.ActionBarView
        android:layout_width="match_parent"
        android:layout_height="@dimen/action_bar_height"
        actionBar:actionBar_background="@color/green"
        actionBar:centerText="@string/text_change_phone"
        actionBar:rightEnable="false" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="10dp"
        android:background="@color/light_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp"
            android:text="@string/name" />

        <TextView

            android:id="@+id/et_fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="40dp"
            android:layout_weight="1"
            android:text="Jose"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/identify_code" />

        <EditText
            android:inputType="number"
            android:id="@+id/et_identity_code"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/enter_identifycode"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </LinearLayout>

    <TextView
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="right"
        android:id="@+id/identity_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_unvalid"
        android:textSize="12sp" />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_gray"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/text_new_num" />

        <EditText
            android:inputType="number"
            android:id="@+id/et_new_phone"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/text_enter_valid_num"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp" />
    </LinearLayout>
    <TextView
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="right"
        android:id="@+id/phone_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_enter_new_right_num"
        android:textSize="12sp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_margin="10dp"
            android:background="@color/light_gray"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:padding="5dp"
                android:text="@string/text_checkNum" />

            <EditText
                android:id="@+id/et_checkNumber"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="20dp"
                android:background="@null"
                android:hint="@string/text_enter_valid_chechnum"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/get_checkNumber"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_margin="10dp"
            android:background="@color/gray"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/text_get_checknum"
            android:textColor="@color/WHITE"
            android:textSize="14sp" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:background="@color/gray"
        android:text="@string/text_change_phonenum"
        android:textColor="@color/WHITE"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/voice_checkNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="5dp"
        android:clickable="false"
        android:gravity="center"
        android:text="@string/tip_6"
        android:textSize="12sp" />
</LinearLayout>